--- a/tphcm.html
+++ b/tphcm.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP. Hồ Chí Minh – Khám Phá Việt Nam</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- ĐẦU TRANG -->
@@ -24,7 +25,7 @@
 
 <!-- BANNER -->
 <div class="banner-tinh">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Ho_Chi_Minh_City_Skyline_December_2009.jpg/1280px-Ho_Chi_Minh_City_Skyline_December_2009.jpg" alt="TP. Hồ Chí Minh về đêm">
+    <img src="https://static.tuoitre.vn/tto/i/s626/2015/04/25/41B6gnc8.jpg" alt="TP. Hồ Chí Minh về đêm">
 </div>
 
 <!-- NỘI DUNG CHÍNH -->
@@ -59,19 +60,19 @@
     <div class="dulịch-list">
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Bitexco_Financial_Tower.jpg/640px-Bitexco_Financial_Tower.jpg" alt="Bitexco">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Bitexco_Financial_Tower_20022012_cropped.JPG/330px-Bitexco_Financial_Tower_20022012_cropped.JPG" alt="Bitexco">
             <h3>Tòa nhà Bitexco Financial Tower</h3>
             <p>Tòa nhà biểu tượng của TP.HCM cao 68 tầng, 262 m. Sân bay trực thăng hình hoa sen ở tầng 52 là điểm nhấn kiến trúc độc đáo. Có đài quan sát Saigon Skydeck ở tầng 49 ngắm toàn thành phố.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Cu_Chi_tunnels_Ben_Duoc.jpg/640px-Cu_Chi_tunnels_Ben_Duoc.jpg" alt="Địa đạo Củ Chi">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG/330px-W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG" alt="Địa đạo Củ Chi">
             <h3>Địa Đạo Củ Chi</h3>
             <p>Hệ thống đường hầm ngầm dài 250 km, là căn cứ địa của lực lượng cách mạng trong kháng chiến chống Mỹ. Hiện là di tích lịch sử và điểm du lịch nổi tiếng thu hút hàng triệu lượt khách mỗi năm.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Ho_Chi_Minh_City_Hall.jpg/640px-Ho_Chi_Minh_City_Hall.jpg" alt="Nhà thờ Đức Bà">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Notre_dame_saigon.jpg/250px-Notre_dame_saigon.jpg" alt="Nhà thờ Đức Bà">
             <h3>Nhà Thờ Đức Bà – Bưu Điện Trung Tâm</h3>
             <p>Hai công trình kiến trúc Pháp cổ điển nổi tiếng nhất trung tâm Sài Gòn. Nhà thờ Đức Bà được xây dựng từ 1877-1880, là biểu tượng kiến trúc thuộc địa còn lưu lại đến ngày nay.</p>
         </div>
@@ -86,19 +87,19 @@
     <div class="amthuc-list">
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Hu_tieu_Nam_Vang.jpg/400px-Hu_tieu_Nam_Vang.jpg" alt="Hủ tiếu Nam Vang">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/H%E1%BB%A7_ti%E1%BA%BFu_nam_vang_gi%C3%B2_4.jpg/250px-H%E1%BB%A7_ti%E1%BA%BFu_nam_vang_gi%C3%B2_4.jpg" alt="Hủ tiếu Nam Vang">
             <h3>Hủ Tiếu Nam Vang</h3>
             <p>Nước dùng trong veo ngọt thanh từ xương heo, ăn kèm thịt bằm, tôm, gan heo và hành phi giòn. Là món ăn sáng đặc trưng không thể thiếu của người Sài Gòn.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Banh_mi_Sai_Gon.jpg/400px-Banh_mi_Sai_Gon.jpg" alt="Bánh mì Sài Gòn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/B%C3%A1nh_m%C3%AC_th%E1%BB%8Bt_n%C6%B0%E1%BB%9Bng.png/250px-B%C3%A1nh_m%C3%AC_th%E1%BB%8Bt_n%C6%B0%E1%BB%9Bng.png" alt="Bánh mì Sài Gòn">
             <h3>Bánh Mì Sài Gòn</h3>
             <p>Ổ bánh mì giòn rụm kẹp thịt nguội, chả lụa, pa tê, dưa leo, cà rốt đồ chua và rau thơm. Bánh mì Việt Nam đã được CNN bình chọn là một trong những món ăn đường phố ngon nhất thế giới.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Banh_canh_cua.jpg/400px-Banh_canh_cua.jpg" alt="Bánh canh cua">
+            <img src="https://cdn.xanhsm.com/2025/01/1d3dbc6e-banh-canh-cua-sai-gon-2-min.jpg" alt="Bánh canh cua">
             <h3>Bánh Canh Cua</h3>
             <p>Sợi bánh canh to mềm, nước dùng béo ngậy từ cua đồng giã nhuyễn, thêm chả cá và hành lá. Là món ăn vặt yêu thích của người Sài Gòn ở mọi lứa tuổi.</p>
         </div>
@@ -133,11 +134,11 @@
     <h2>5. Thư viện hình ảnh</h2>
 
     <div class="gallery">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Ho_Chi_Minh_City_Skyline_December_2009.jpg/400px-Ho_Chi_Minh_City_Skyline_December_2009.jpg" alt="Skyline TP.HCM">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Bitexco_Financial_Tower.jpg/400px-Bitexco_Financial_Tower.jpg" alt="Bitexco">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Cu_Chi_tunnels_Ben_Duoc.jpg/400px-Cu_Chi_tunnels_Ben_Duoc.jpg" alt="Địa đạo Củ Chi">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Ho_Chi_Minh_City_Hall.jpg/400px-Ho_Chi_Minh_City_Hall.jpg" alt="UBND TP.HCM">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Ho_Chi_Minh_City_Skyline_December_2009.jpg/400px-Ho_Chi_Minh_City_Skyline_December_2009.jpg" alt="Sài Gòn về đêm">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3IE1hxzMhbwzHFFyw4Jiniq11JAX5O3F43Q&s" alt="Skyline TP.HCM">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Bitexco_Financial_Tower_20022012_cropped.JPG/330px-Bitexco_Financial_Tower_20022012_cropped.JPG" alt="Bitexco">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG/330px-W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG" alt="Địa đạo Củ Chi">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvKUSA6IztdKcEzUtoMuHjpMEmklbhciHwrg&s" alt="UBND TP.HCM">
+        <img src="https://static.tuoitre.vn/tto/i/s626/2015/04/25/41B6gnc8.jpg" alt="Sài Gòn về đêm">
     </div>
 
     <br>
