--- a/ha-noi.html
+++ b/ha-noi.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hà Nội – Khám Phá Việt Nam</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- ĐẦU TRANG -->
@@ -59,19 +60,19 @@
     <div class="dulịch-list">
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg/640px-Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg" alt="Hồ Hoàn Kiếm">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Hoan_Kiem.jpg" alt="Hồ Hoàn Kiếm">
             <h3>Hồ Hoàn Kiếm</h3>
             <p>Biểu tượng của Hà Nội, gắn với truyền thuyết vua Lê trả gươm thần cho Rùa Vàng. Khu vực đền Ngọc Sơn và cầu Thê Húc là điểm check-in nổi tiếng nhất thủ đô.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Temple_of_Literature%2C_Hanoi_02.jpg/640px-Temple_of_Literature%2C_Hanoi_02.jpg" alt="Văn Miếu – Quốc Tử Giám">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Hanoi_Temple_of_Literature_%28cropped%29.jpg/640px-Hanoi_Temple_of_Literature_%28cropped%29.jpg" alt="Văn Miếu – Quốc Tử Giám">
             <h3>Văn Miếu – Quốc Tử Giám</h3>
             <p>Trường đại học đầu tiên của Việt Nam, xây dựng năm 1070 thời vua Lý Thánh Tông. Là nơi thờ Khổng Tử và các bậc hiền tài đất Việt, biểu trưng cho tinh thần hiếu học.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Ho_Chi_Minh_Mausoleum_2011.jpg/640px-Ho_Chi_Minh_Mausoleum_2011.jpg" alt="Lăng Bác">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/L%C4%83ng_B%C3%A1c_-_NKS.jpg/330px-L%C4%83ng_B%C3%A1c_-_NKS.jpg" alt="Lăng Bác">
             <h3>Lăng Chủ tịch Hồ Chí Minh</h3>
             <p>Công trình lịch sử trang nghiêm nơi thi hài của Chủ tịch Hồ Chí Minh được lưu giữ. Hàng ngày có hàng ngàn người dân và du khách đến viếng thăm.</p>
         </div>
@@ -86,19 +87,19 @@
     <div class="amthuc-list">
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Pho_bo.jpg/400px-Pho_bo.jpg" alt="Phở Hà Nội">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Ph%E1%BB%9F_b%C3%B2%2C_C%E1%BA%A7u_Gi%E1%BA%A5y%2C_H%C3%A0_N%E1%BB%99i.jpg/250px-Ph%E1%BB%9F_b%C3%B2%2C_C%E1%BA%A7u_Gi%E1%BA%A5y%2C_H%C3%A0_N%E1%BB%99i.jpg" alt="Phở Hà Nội">
             <h3>Phở Hà Nội</h3>
             <p>Món ăn nổi tiếng nhất Việt Nam. Phở Hà Nội đặc trưng bởi nước dùng trong, ngọt thanh từ xương bò hầm lâu với hương thơm của gừng nướng và thảo quả.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Bun_cha_Hanoi.jpg/400px-Bun_cha_Hanoi.jpg" alt="Bún chả">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/B%C3%BAn_ch%E1%BA%A3_Th%E1%BB%A5y_Khu%C3%AA.jpg/500px-B%C3%BAn_ch%E1%BA%A3_Th%E1%BB%A5y_Khu%C3%AA.jpg" alt="Bún chả">
             <h3>Bún Chả Hà Nội</h3>
             <p>Món bún với chả thịt nướng thơm lừng, chấm nước mắm chua ngọt pha loãng. Nổi tiếng đến mức Tổng thống Mỹ Obama đã từng thưởng thức khi thăm Hà Nội năm 2016.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Banh_mi_Viet_Nam.jpg/400px-Banh_mi_Viet_Nam.jpg" alt="Bánh cuốn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/B%C3%A1nh_cu%E1%BB%91n_Thanh_Tr%C3%AC.jpg/250px-B%C3%A1nh_cu%E1%BB%91n_Thanh_Tr%C3%AC.jpg" alt="Bánh cuốn">
             <h3>Bánh Cuốn Thanh Trì</h3>
             <p>Lớp bánh mỏng mướt làm từ bột gạo tráng hấp, ăn kèm chả lụa, hành phi giòn và nước chấm đặc biệt. Đây là món ăn sáng truyền thống của người Hà Nội.</p>
         </div>
@@ -138,11 +139,12 @@
     <h2>5. Thư viện hình ảnh</h2>
 
     <div class="gallery">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg/400px-Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg" alt="Hồ Hoàn Kiếm">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Temple_of_Literature%2C_Hanoi_02.jpg/400px-Temple_of_Literature%2C_Hanoi_02.jpg" alt="Văn Miếu">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Ho_Chi_Minh_Mausoleum_2011.jpg/400px-Ho_Chi_Minh_Mausoleum_2011.jpg" alt="Lăng Bác">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Bun_cha_Hanoi.jpg/400px-Bun_cha_Hanoi.jpg" alt="Bún chả Hà Nội">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Pho_bo.jpg/400px-Pho_bo.jpg" alt="Phở Hà Nội">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Hoan_Kiem.jpg/1280px-Hoan_Kiem.jpg" alt="Hồ Hoàn Kiếm">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Hanoi_Temple_of_Literature_%28cropped%29.jpg/640px-Hanoi_Temple_of_Literature_%28cropped%29.jpg" alt="Văn Miếu">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/L%C4%83ng_B%C3%A1c_-_NKS.jpg/330px-L%C4%83ng_B%C3%A1c_-_NKS.jpg" alt="Lăng Bác">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/B%C3%BAn_ch%E1%BA%A3_Th%E1%BB%A5y_Khu%C3%AA.jpg/500px-B%C3%BAn_ch%E1%BA%A3_Th%E1%BB%A5y_Khu%C3%AA.jpg" alt="Bún chả Hà Nội">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Ph%E1%BB%9F_b%C3%B2%2C_C%E1%BA%A7u_Gi%E1%BA%A5y%2C_H%C3%A0_N%E1%BB%99i.jpg/250px-Ph%E1%BB%9F_b%C3%B2%2C_C%E1%BA%A7u_Gi%E1%BA%A5y%2C_H%C3%A0_N%E1%BB%99i.jpg" alt="Phở Hà Nội">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/B%C3%A1nh_cu%E1%BB%91n_Thanh_Tr%C3%AC.jpg/250px-B%C3%A1nh_cu%E1%BB%91n_Thanh_Tr%C3%AC.jpg" alt="Bánh cuốn">
     </div>
 
     <br>
