--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khám Phá Việt Nam</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- ĐẦU TRANG -->
 <header>
-    <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
-    <span>Tổ 3</span>
+     <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
+     <span>Tổ 3</span>
 </header>
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
@@ -98,6 +99,24 @@
     </div>
 
 </main>
+<!-- GÓP Ý & ĐẶT CÂU HỎI -->
+<section class="feedback">
+    <h2>Góp ý & Đặt câu hỏi</h2>
+    <p>Nếu bạn có góp ý hoặc câu hỏi về website, hãy gửi cho chúng tôi nhé!</p>
+
+    <form>
+        <label>Họ và tên:</label>
+        <input type="text" placeholder="Nhập họ và tên..." required>
+
+        <label>Email:</label>
+        <input type="email" placeholder="Nhập email của bạn..." required>
+
+        <label>Nội dung góp ý / câu hỏi:</label>
+        <textarea rows="5" placeholder="Viết nội dung tại đây..." required></textarea>
+
+        <button type="submit">Gửi phản hồi</button>
+    </form>
+</section>
 
 <!-- CHÂN TRANG -->
 <footer>
